# bevy-eskate

./: Cargo.toml  index.html
assets/stages/: stage1.stage.json  stage2.stage.json  stage3.stage.json  stage4.stage.json  stage5.stage.json  stage6.stage.json  stage7.stage.json  stage8.stage.json  stage9.stage.json  test.stage.json
src/: assets.rs  before_stage_edit.rs  button.rs  cursor.rs  error.rs  extension.rs  gama_state.rs  gimmick.rs  loader.rs  main.rs  page.rs  playing.rs  stage.rs  stage_creator.rs  stage_edit.rs  stage_maker.rs  stage_select.rs  title.rs  undo.rs  window.rs
src/assets/: cursor.rs  font.rs  gimmick.rs  stage.rs  stage_edit_assets.rs
src/gimmick/: asset.rs  fall_down.rs  floor.rs  goal.rs  next_page.rs  player.rs  rock.rs  tag.rs
src/loader/: json.rs  native.rs
src/page/: page_count.rs  page_index.rs  page_param.rs
src/playing/: fall_down.rs  gimmick.rs  idle.rs  move_direction.rs  next_page.rs  phase.rs  start_moving.rs
src/playing/gimmick/: asset.rs  floor.rs  goal.rs  next_page.rs  player.rs  rock.rs  tag.rs
src/playing/phase/: idle.rs  next_page.rs  start_move.rs
src/stage/: playing.rs  state.rs  status.rs  ui.rs
src/stage/playing/: collide.rs  gimmick.rs  move_direction.rs  move_position.rs  phase.rs
src/stage_creator/: idle.rs  pick.rs
src/stage_edit/: eraser.rs  idle.rs  page.rs  page_count.rs  page_param.rs  pick.rs  save.rs  stage_name.rs  ui.rs
src/stage_edit/page/: item_area.rs
src/stage_edit/ui/: item_area.rs
src/undo/: attached.rs  extension.rs  non_attach.rs  on_undo.rs
src/undo/non_attach/: builder.rs
(+33 files in other folders)
