[package]
name = "eskate"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.11.0" }
bevy_reflect = "0.11.0"
bevy_egui = "0.21.0"
bevy-inspector-egui = "0.19.0"
bevy_tweening = "0.8.0"
bevy-trait-query = "0.3.0"
itertools = "0.11.0"
serde_json = "1.0.104"
serde = { version = "1.0.176", features = ["derive"] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
bevy-undo2 = {  path = "../bevy-undo2" }
thiserror = "1.0.43"
directories = "5.0.1"
auto-delegate = "0.0.7"
bevy_asset_loader = "0.17.0"
bevy_common_assets = { version = "0.7.0", features = ["json"] }
bevy-sequential-actions = "0.8.0"
bevy-input-sequence = {version = "0.1.0"}